--- a/moviesShow/movies.html
+++ b/moviesShow/movies.html
@@ -16,7 +16,7 @@
     <header class="header">
         <nav class="d-flex align-items-center">
             <div class="category d-flex align-items-center">
-                <a href="../home/index.html"><img src="../imgs/Logo.png" alt=""></a>
+                <a href="../index.html"><img src="../imgs/Logo.png" alt=""></a>
                 <ul class="d-flex align-items-center">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">TV Shows</a></li>
